--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,7 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
             }
           },
           "defaultConfiguration": "production"
